Remove outline from .dropdown-item focus state to avoid container overlap introduced with new handling of default anchor focus state

--- a/scss/_dropdown.scss
+++ b/scss/_dropdown.scss
@@ -160,6 +160,7 @@
   &:focus {
     color: $dropdown-link-hover-color;
     text-decoration: if($link-hover-decoration == underline, none, null);
+    outline: none;
     @include gradient-bg($dropdown-link-hover-bg);
   }
 
